pm2 logs & logs out
