# swagger.json
@@ -57,6 +57,64 @@
           "auth"
         ]
       }
+    },
+    "/logs/error/{lines}": {
+      "get": {
+        "operationId": "LogsController_getErrorLogs",
+        "parameters": [
+          {
+            "name": "lines",
+            "required": true,
+            "in": "path",
+            "description": "Number of error log lines to retrieve",
+            "schema": {
+              "type": "number"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Returns the last N lines from the error log file"
+          }
+        },
+        "security": [
+          {
+            "JWT-auth": []
+          }
+        ],
+        "tags": [
+          "logs"
+        ]
+      }
+    },
+    "/logs/output/{lines}": {
+      "get": {
+        "operationId": "LogsController_getOutputLogs",
+        "parameters": [
+          {
+            "name": "lines",
+            "required": true,
+            "in": "path",
+            "description": "Number of output log lines to retrieve",
+            "schema": {
+              "type": "number"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Returns the last N lines from the output log file"
+          }
+        },
+        "security": [
+          {
+            "JWT-auth": []
+          }
+        ],
+        "tags": [
+          "logs"
+        ]
+      }
     }
   },
   "info": {
@@ -121,11 +179,15 @@
           },
           "name": {
             "type": "string"
+          },
+          "stack": {
+            "type": "string"
           }
         },
         "required": [
           "message",
-          "name"
+          "name",
+          "stack"
         ]
       },
       "LoginResponseDto": {
